loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: value update is not a member of Boolean
while (isFacingWall() = 0 )
       ^